--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <header>
     <h1>Aula Gratuita de git</h1>
+    <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatum porro debitis adipisci quas</h2>
   </header>
 </body>
 </html>
